@@ -1,10 +1,9 @@
 package com.hust.interactionservice.service.impl;
 
 import com.hust.commonlibrary.dto.ListResponse;
-import com.hust.commonlibrary.utils.SecurityUtils;
 import com.hust.interactionservice.constant.FeedbackStatus;
+import com.hust.interactionservice.constant.FeedbackType;
 import com.hust.interactionservice.dto.request.FeedbackReplyRequest;
-
 import com.hust.interactionservice.dto.request.FeedbackRequest;
 import com.hust.interactionservice.dto.response.FeedbackReplyResponse;
 import com.hust.interactionservice.dto.response.FeedbackResponse;
@@ -16,12 +15,11 @@ import com.hust.interactionservice.repository.FeedbackReplyRepository;
 import com.hust.interactionservice.repository.FeedbackRepository;
 import com.hust.interactionservice.service.FeedbackService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,29 +29,18 @@ public class FeedbackServiceImpl implements FeedbackService {
     private final FeedbackReplyRepository feedbackReplyRepository;
     private final FeedbackMapper feedbackMapper;
     private final FeedbackReplyMapper feedbackReplyMapper;
+    private final MongoTemplate mongoTemplate;
 
     @Override
     public FeedbackResponse createFeedback(FeedbackRequest request) {
-        String userId = SecurityUtils.getCurrentUserIdOrThrow();
         Feedback feedback = feedbackMapper.requestToEntity(request);
-        feedback.setUserId(userId);
         feedback.setStatus(FeedbackStatus.PENDING);
         
         Feedback saved = feedbackRepository.save(feedback);
         return feedbackMapper.entityToResponse(saved);
     }
 
-    @Override
-    public ListResponse<FeedbackResponse> getMyFeedbacks(Pageable pageable) {
-        String userId = SecurityUtils.getCurrentUserIdOrThrow();
-        Page<Feedback> page = feedbackRepository.findByUserId(userId, pageable);
-        
-        List<FeedbackResponse> content = page.getContent().stream()
-                .map(this::populateReplies)
-                .collect(Collectors.toList());
-                
-        return ListResponse.of(content, page);
-    }
+
 
     @Override
     public FeedbackResponse getFeedbackDetail(String id) {
@@ -63,23 +50,43 @@ public class FeedbackServiceImpl implements FeedbackService {
     }
 
     @Override
-    public ListResponse<FeedbackResponse> getAllFeedbacks(String keyword, FeedbackStatus status, Pageable pageable) {
-        Page<Feedback> page;
-        if (keyword != null && !keyword.isEmpty() && status != null) {
-            page = feedbackRepository.findByTitleContainingIgnoreCaseAndStatus(keyword, status, pageable);
-        } else if (keyword != null && !keyword.isEmpty()) {
-            page = feedbackRepository.findByTitleContainingIgnoreCase(keyword, pageable);
-        } else if (status != null) {
-            page = feedbackRepository.findByStatus(status, pageable);
-        } else {
-            page = feedbackRepository.findAll(pageable);
+    public ListResponse<FeedbackResponse> getAllFeedbacks(String keyword, FeedbackType type, FeedbackStatus status, Pageable pageable) {
+        org.springframework.data.mongodb.core.query.Query query = new org.springframework.data.mongodb.core.query.Query();
+
+        if (keyword != null && !keyword.isBlank()) {
+            org.springframework.data.mongodb.core.query.Criteria criteria = new org.springframework.data.mongodb.core.query.Criteria().orOperator(
+                org.springframework.data.mongodb.core.query.Criteria.where("title").regex(keyword, "i"),
+                org.springframework.data.mongodb.core.query.Criteria.where("content").regex(keyword, "i"),
+                org.springframework.data.mongodb.core.query.Criteria.where("name").regex(keyword, "i"),
+                org.springframework.data.mongodb.core.query.Criteria.where("email").regex(keyword, "i")
+            );
+            query.addCriteria(criteria);
         }
 
-        List<FeedbackResponse> content = page.getContent().stream()
-                .map(this::populateReplies)
-                .collect(Collectors.toList());
+        if (type != null) {
+            query.addCriteria(org.springframework.data.mongodb.core.query.Criteria.where("type").is(type));
+        }
 
-        return ListResponse.of(content, page);
+        if (status != null) {
+            query.addCriteria(org.springframework.data.mongodb.core.query.Criteria.where("status").is(status));
+        }
+
+        long total = mongoTemplate.count(query, Feedback.class);
+        query.with(pageable);
+        List<Feedback> feedbacks = mongoTemplate.find(query, Feedback.class);
+
+        List<FeedbackResponse> content = feedbacks.stream()
+                .map(this::populateReplies)
+                .toList();
+
+        return ListResponse.of(
+            content,
+            pageable.getPageNumber() + 1,
+            pageable.getPageSize(),
+            total,
+            (int) Math.ceil((double) total / pageable.getPageSize()),
+            (pageable.getOffset() + pageable.getPageSize()) >= total
+        );
     }
 
     @Override
@@ -93,14 +100,11 @@ public class FeedbackServiceImpl implements FeedbackService {
 
     @Override
     public FeedbackReplyResponse replyFeedback(String feedbackId, FeedbackReplyRequest request) {
-        String adminId = SecurityUtils.getCurrentUserIdOrThrow();
-        
         Feedback feedback = feedbackRepository.findById(feedbackId)
                 .orElseThrow(() -> new RuntimeException("Feedback not found"));
-                
+                 
         FeedbackReply reply = feedbackReplyMapper.requestToEntity(request);
         reply.setFeedbackId(feedbackId);
-        reply.setUserId(adminId);
         
         FeedbackReply saved = feedbackReplyRepository.save(reply);
         
@@ -112,22 +116,14 @@ public class FeedbackServiceImpl implements FeedbackService {
         return feedbackReplyMapper.entityToResponse(saved);
     }
 
-    @Override
-    public void deleteFeedback(String id) {
-        Feedback feedback = feedbackRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Feedback not found"));
-        feedbackRepository.delete(feedback);
-        
-        List<FeedbackReply> replies = feedbackReplyRepository.findByFeedbackId(id);
-        feedbackReplyRepository.deleteAll(replies);
-    }
+
     
     private FeedbackResponse populateReplies(Feedback feedback) {
         FeedbackResponse response = feedbackMapper.entityToResponse(feedback);
         List<FeedbackReplyResponse> replies = feedbackReplyRepository.findByFeedbackId(feedback.getId())
                 .stream()
                 .map(feedbackReplyMapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
         response.setReplies(replies);
         return response;
     }
